chore: Update hero with new components

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,3 +37,13 @@ body {
 .button{
   color: #d90a14 !important
 }
+
+/* styles.css */
+.text-gradient {
+  background: linear-gradient(to right, #d80b15, #ce4a17);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
+}
+
